手機版處理

--- a/header.html
+++ b/header.html
@@ -1,10 +1,13 @@
-<item_holder><a href="/baiyeh">首頁</a></item_holder>
-<item_holder>
-  <a>設定相關</a>
-  <items>
-    <a>基本設定</a>
-    <a href="/baiyeh/pages/base_scale.html">基礎量表</a>
-  </items>
-</item_holder>
-<item_holder><a>項目B</a></item_holder>
-<item_holder><a>項目C</a></item_holder>
+<button id="header_switch" onclick="this.classList.toggle('open')"></button>
+<div id="header">
+  <item_holder><a href="/baiyeh/">首頁</a></item_holder>
+  <item_holder>
+    <a>設定相關</a>
+    <items>
+      <a>基本設定</a>
+      <a href="/baiyeh/pages/base_scale.html">基礎量表</a>
+    </items>
+  </item_holder>
+  <item_holder><a>項目B</a></item_holder>
+  <item_holder><a>項目C</a></item_holder>
+</div>
