量表文字置中

--- a/pages/base_scale.html
+++ b/pages/base_scale.html
@@ -68,8 +68,9 @@
         z-index: 1;
         border-radius: 4px 4px 0 0;
       }
+      list span { text-align: center; }
       @media (min-width: 768px) {
-        span br { display: none; }
+        list span br { display: none; }
       }
       @media (max-width: 767px) {
         list {
