量表：阿耶調整

--- a/pages/base_scale.html
+++ b/pages/base_scale.html
@@ -347,7 +347,7 @@
           <span>開放</span>
 
           <span>強硬</span>
-          <bar class="c7"><bai style="--p:2"></bai><yeh style="--p:6"></yeh></bar>
+          <bar class="c7"><bai style="--p:2"></bai><yeh style="--p:5"></yeh></bar>
           <span>溫和</span>
 
           <span>放縱</span>
@@ -359,7 +359,7 @@
           <span>膽小</span>
 
           <span>隨興</span>
-          <bar class="c7"><bai style="--p:3"></bai><yeh style="--p:2"></yeh></bar>
+          <bar class="c7"><bai style="--p:3"></bai><yeh style="--p:5"></yeh></bar>
           <span>嚴謹</span>
 
           <span>遲鈍</span>
@@ -379,7 +379,7 @@
           <span>悲觀</span>
 
           <span>固執</span>
-          <bar class="c7"><bai style="--p:5"></bai><yeh style="--p:3"></yeh></bar>
+          <bar class="c7" note="一般狀況性格隨和，重視的事上會偏向固執"><bai style="--p:5"></bai><yeh style="--p:2"></yeh><yeh style="--p:6"></yeh></bar>
           <span>隨和</span>
 
           <span>老實</span>
