新頁面：基本設定

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
   <item_holder>
     <a>設定相關</a>
     <items>
-      <a>基本設定</a>
+      <a href="/baiyeh/pages/base_setting.html">基本設定</a>
       <a href="/baiyeh/pages/base_scale.html">基礎量表</a>
       <a>看法</a>
     </items>
