--- a/pages/base_scale.html
+++ b/pages/base_scale.html
@@ -379,7 +379,7 @@
           <span>悲觀</span>
 
           <span>固執</span>
-          <bar class="c7" note="一般狀況性格隨和，重視的事上會偏向固執"><bai style="--p:5"></bai><yeh style="--p:2"></yeh><yeh style="--p:6"></yeh></bar>
+          <bar class="c7" note="阿耶一般狀況性格隨和，重視的事上會偏向固執"><bai style="--p:5"></bai><yeh style="--p:2"></yeh><yeh style="--p:6"></yeh></bar>
           <span>隨和</span>
 
           <span>老實</span>
