更新：基本設定

--- a/header.html
+++ b/header.html
@@ -9,6 +9,11 @@
       <a>看法</a>
     </items>
   </item_holder>
-  <item_holder><a>項目B</a></item_holder>
+  <item_holder>
+    <a>故事</a>
+    <items>
+      <a href="/baiyeh/pages/yeh_quotes.html">柯耀耶 語錄及行動回顧</a>
+    </items>
+  </item_holder>
   <item_holder><a>項目C</a></item_holder>
 </div>
