--- a/pages/form_list.html
+++ b/pages/form_list.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     <header></header>
-    <div id="main_content">
-      <h1>問卷類</h1>
-      <div>ASDF</div>
-    </div>
+    <main id="root">
+      <div id="main_content">
+        <h1>問卷類</h1>
+        <div>ASDF</div>
+      </div>
+    </main>
   </body>
 </html>
