--- a/pages/yeh_quotes.html
+++ b/pages/yeh_quotes.html
@@ -14,7 +14,7 @@
     <header></header>
     <main id="root">
       <div id="main_content">
-        <h1>首頁還不知道放甚麼</h1>
+        <h2>柯耀耶   語錄及行動回顧</h2>
       </div>
     </main>
   </body>
