測試在網站上改

--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -144,7 +144,7 @@
           <div class="text y">
             常態溫柔型微笑<br>
             工作是體力活，體力很好力氣也不小<br>
-            右手有鳥爪型的燒傷疤<br>
+            右手有鳥爪型的燒傷疤（事件中受傷）<br>
             <img class="click_img" src="/baiyeh/imgs/yeh_傷疤.png"/>
           </div>
           <h5>【性格】</h5>
