--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -142,7 +142,7 @@
             天生內分泌失調，有時需要吃安眠藥、鎮定劑
           </div>
           <div class="text y">
-            常態溫柔型微笑<br>
+            長相端正，常態溫柔型微笑<br>
             工作是體力活，體力很好力氣也不小<br>
             右手有鳥爪型的燒傷疤（事件中受傷）<br>
             <img class="click_img" src="/baiyeh/imgs/yeh_傷疤.png"/>
