--- a/pages/yeh_quotes.html
+++ b/pages/yeh_quotes.html
@@ -13,9 +13,7 @@
   <body>
     <header></header>
     <main id="root">
-      <div id="main_content">
-        <h2>柯耀耶   語錄及行動回顧</h2>
-      </div>
+      <iframe class="fill_iframe" src="https://docs.google.com/document/d/e/2PACX-1vTzvArleTamSrbinFeHXu0TSihWesKQiKD9_j9myVjuY-P8y3vnr5hGawc6SZa1DPinOIogpQM_CDZ3/pub?embedded=true"></iframe>
     </main>
   </body>
 </html>
