--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -163,8 +163,7 @@
             個性很好，行為端正且隨和，做事細心。<br>
             無表情的時候一臉無害樣。<br>
             有時候會開地獄玩笑（看人）。<br>
-            因為工作的關係有自己一套的價值觀，但時常又因為本能行為。<br>
-            與理念衝突而產生自我矛盾。<br>
+            因為工作的關係有自己一套的價值觀，但時常又因為本能行為與理念衝突而產生自我矛盾。<br>
             很會賴床，如果沒有正事要辦的話，可以在床上躺個半天。
           </div>
           <h5>【基本背景】</h5>
