更新：改分隔線樣式

--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -73,6 +73,10 @@
         max-width: 100%;
         margin: 16px 0;
       }
+      .text hr {
+        border-color: #aaa;
+        margin: 16px 0;
+      }
       @media (max-width: 767px) {
         list {
           font-size: 16px;
