各種小修改

--- a/pages/base_scale.html
+++ b/pages/base_scale.html
@@ -268,7 +268,7 @@
           <bar note="阿耶工作時間不固定，作息不穩定"><bai style="--p:5"></bai></bar>
           <span>熬夜</span>
 
-          <span>沒有起床氣</span>
+          <span>沒有<br>起床氣</span>
           <bar><bai style="--p:1"></bai><yeh style="--p:2"></yeh></bar>
           <span>有起床氣</span>
 
