--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -142,8 +142,7 @@
           <div class="text b">
             利他主義，通常會很無視自我，需要關注自己狀態或想法的時候會很貶低自己。<br>
             對某些特定人事物很執著，但除外的事物很容易放棄。<br>
-            通常做事有事先計畫會比較安心，超過精神負荷又會。<br>
-            變得很衝動行事，然後再邊做邊後悔。<br>
+            通常做事有事先計畫會比較安心，超過精神負荷又會變得很衝動行事，然後再邊做邊後悔。<br>
             對正在做的事情很難收手。<br>
             稍微有點懶人。<br>
             一些些保護欲。
@@ -163,7 +162,7 @@
             母親中國人，醫生。<br>
             出生於大陸長安，居住日本秋田，國中時搬到日本的。<br>
             警校退學，曾經在臺灣偏僻鄉下的派出所偷過槍。<br>
-            在<note t="兩人相識的跑團遭遇事件">事件</note>之後常到臺灣暫時居住。
+            在事件之後常到臺灣暫時居住。
           </div>
           <div class="text y">
             家裡在南部開禮儀公司及人力業，學生時期會跟著跑場賺零用錢。<br>
