更新：基本資料新增一段看法

--- a/pages/base_setting.html
+++ b/pages/base_setting.html
@@ -182,6 +182,13 @@
             將其當作暫時的保護對象，推遲了原本目的是尋死一事。<br>
             隨著事件推進，在分散之後發現自己還想再見到對方，改變了原先打算犧牲自己性命的選擇，但也因為沒選擇犧牲而陷入自責，變相開始過度保護對方。
             <hr>
+            <h6>事件後至交往前：恩人、愧疚 > 愛慕 > 追求</h6>
+            被阿耶救了一命，對阿耶很感謝但還是帶著愧疚。<br>
+            環島看海的時候意識到在肢體碰觸這方面上對阿耶的戒心變低，也因為阿耶的關係試著喜歡海。<br>
+            嘗試主動聯繫和相約見面，一次次互動中慢慢確認了自己對阿耶的心意。<br>
+            抱持這種心情回日本打算把搞砸的事情處理好，才發現自己很需要對方，於是在訂下的期限中途就回到台灣了，待在阿耶身邊也確實好轉了很多。<br>
+            日本旅遊時本來以會被拒絕的前提準備在最後一天告白，最後卻因為氣氛的關係提前告訴阿耶，確認彼此的心意後正式成為情侶，並在旅途結束後一起回到臺灣。
+            <hr>
           </div>
           <div class="text y">
             <h6>初識至事件結束：不好相處 > 在意  > 重要的人</h6>
